<?xml version="1.0"?>
<package>
  <name>lino_visualize</name>
  <version>0.0.0</version>
  <description>RVIZ files for LINOROBOT</description>

  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
